fix design on small screen

--- a/style.css
+++ b/style.css
@@ -66,7 +66,6 @@
     }
 }
 
-
 html,
 body{
     font-family: "Rubik", sans-serif;
@@ -89,7 +88,8 @@ body{
 }
 
 .title{
-    top: 5vmin;
+    padding: 2vmin;
+    padding-top: 4vmin;
     font-size: 4rem;
     text-align: center;
     height: fit-content;
@@ -97,9 +97,8 @@ body{
     text-transform: uppercase;
 }
 
-.gradient-text{
+.gradient-text > *{
     animation: background-pan 3s linear infinite;
-    position: relative;
     background: linear-gradient(
         to right,
         var(--grad-purple),
@@ -111,10 +110,8 @@ body{
     color: transparent; -webkit-text-fill-color: transparent;
     background-size: 200%;
     white-space: nowrap;
-    font-size: .7em;
+    font-size: .9em;
 }
-
-
 
 .gradient-text::before{
     animation: background-pan 1s linear infinite;
@@ -132,7 +129,6 @@ body{
         var(--grad-purple)
     );
 }
-
 
 .function-footer{
     --bg-color: var(--color);
@@ -167,7 +163,7 @@ body{
     --gap: 2vmin;
     position: relative;
     top: 7vmin; bottom: 23vmin;
-    width: 100%; height: 70vh;
+    width: 100%; height: 70vmin;
     display: grid;
     grid-template-columns: 66% 33%;
     gap: max(1em, var(--gap));
@@ -215,20 +211,20 @@ body{
 
 @media screen and (max-width: 900px) {
     .main-page{
-        top: 3vh;
         grid-template-columns: 100%;
-        height: 85vh;
+        height: 60vmin;
     }
     .title{
-        font-size: min(2.5rem,8vmin);
+        font-size: max(1rem,6vmin);
+        padding-top: 8vmin;
     }
-
 }
+
+
 
 @media (orientation: portrait) {
     .main-page{
         top: 3vh;
         grid-template-columns: 100%;
-        height: 85vh;
     }
   }
